@@ -1,3 +1,10 @@
+2004/01/27 11:44 (-0500) rwmcfa1
+
+	* ParseXSDoc.pm, GenPod.pm: added a new =for type, see_also which
+	allows for appending things to see onto the end of the apidoc 
+	autogenerated SEE ALSO sections, much desired/asked for feature. code
+	added to ParseXSDoc to find them and GenPod to use them.
+
 2004/01/27 10:44 (-0500) rwmcfa1
 
 	* MakeHelper.pm: provide a mechinism for over-ridding the global 
